// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom options 1`] = `
Object {
  ".github/workflows/auto-approve.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'custom-auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \\"{{ secrets.PROJEN_SECRET }}\\"
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.github/workflows/auto-approve.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  "README.md": "# replace this",
}
`;

exports[`default options 1`] = `
Object {
  ".github/workflows/auto-approve.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \\"{{ secrets.PROJEN_SECRET }}\\"
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.github/workflows/auto-approve.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  "README.md": "# replace this",
}
`;
